# scTimeBench

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: auto_doc.yml  auto_doc_leaderboard.yml  ci-install.yml  release-pypi.yml
assets/csv_results/: embedding.csv  gex_pred.csv  graph_sim.csv
configs/: CellMNN.yaml  MIOFlow.yaml  PISDE.yaml  PRESCIENT.yaml  Squidiff.yaml  WOT.yaml  moscot.yaml  scIMF.yaml
configs/PRESCIENT/: PRESCIENT2.yaml  PRESCIENT_Ola.yaml  PRESCIENT_ma.yaml
configs/correlation/: pearson_avg.yaml  spearman_max.yaml
configs/ot_cfm/: base.yaml  entropic_reg.yaml  partial.yaml  pca_combined_spatial_pseudotime_gaussian.yaml  pseudotime.yaml  to_first.yaml
configs/scNODE/: classifier.yaml  embeds.yaml  scNODE_defaults.yaml  scNODE_tags.yaml
csv_results/: gex_pred.csv  graph_sim.csv
docs/: .buildinfo  api.html  base_run.html  data_contrib.html  genindex.html  index.html  method_contrib.html  metric_contrib.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/.doctrees/: api.doctree  base_run.doctree  data_contrib.doctree  environment.pickle  index.doctree  method_contrib.doctree  metric_contrib.doctree  setup.doctree
docs/_sources/: data_contrib.rst.txt  index.rst.txt  method_contrib.rst.txt  metric_contrib.rst.txt
docs/source/: api.rst  base_run.rst  conf.py  data_contrib.rst  index.rst  leaderboard.rst  method_contrib.rst  metric_contrib.rst  setup.rst  usage.rst
examples/ExampleRandomSampler/: model.py  train_and_test.sh
examples/configs/: Artemis.yaml  CellMNN.yaml  ExampleRandomSampler.yaml  ExampleRandomSampler_defaults.yaml  ExampleRandomSampler_tags.yaml  MIOFlow.yaml  MIOFlow_timepoint_test.yaml  MIOFlow_user_defined.yaml  Ma_MIOFlow.yaml  PISDE.yaml  PRESCIENT.yaml  PRESCIENT2.yaml  PRESCIENT_MAO.yaml  PRESCIENT_Ola.yaml  PRESCIENT_ma.yaml  Squidiff.yaml  WOT.yaml  cooccurrence.yaml  moscot.yaml  scIMF.yaml  scIMF_user_defined.yaml  scNODE.yaml  scNODE_defaults.yaml  scNODE_tags.yaml  scNODE_user_defined.yaml
methods/Artemis/: run.py  train_and_test.sh
methods/MIOFlow/: run.py  train_and_test.sh
methods/MNN/: run.py  train_and_test.sh
methods/PISDE/: run.py  train_and_test.sh
methods/PRESCIENT/: run.py  train_and_test.sh
methods/Squidiff/: run.py  train_and_test.sh
methods/WOT/: run.py  train_and_test.sh
methods/cooccurrence/: run.py  train_and_test.sh
methods/correlation/: run.py  train_and_test.sh
methods/moscot/: run.py  train_and_test.sh
methods/ot_cfm/: run.py  train_and_test.sh
methods/scIMF/: run.py  train_and_test.sh
methods/scNODE/: run.py  train_and_test.sh
model_utils/: features.yaml  parser.py  shared.py
models/Artemis/: run.py  train_and_test.sh
models/MIOFlow/: run.py  train_and_test.sh
models/MNN/: run.py  train_and_test.sh
models/PISDE/: run.py  train_and_test.sh
models/PRESCIENT/: run.py  train_and_test.sh
models/Squidiff/: run.py  train_and_test.sh
models/WOT/: ReadMe.md  run.py  train_and_test.sh
models/cooccurrence/: run.py  train_and_test.sh
models/correlation/: run.py  train_and_test.sh
models/moscot/: ReadMe.md  run.py  train_and_test.sh
models/scIMF/: run.py  train_and_test.sh
models/scNODE/: run.py  train_and_test.sh
plotting/bar_plots/: bar.csv  plot.py
plotting/dot_plot/: data.csv  data_v2.csv  data_v3.csv  plot.py  plot_v2.py  (+1 more)
shared/: constants.py  helpers.py
src/: ReadMe.md  config.py  database.py  main.py
test/: ReadMe.md  conftest.py  test_suite_helpers.py
(+273 files in other folders)
