[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crispy_fishstick"  # This is the name you use for 'pip install'
version = "0.1"
dependencies = [
    "PyYAML",
    "scanpy[leiden]",
    "scikit_learn",
    "fastparquet",
    "pyarrow",
]

[tool.setuptools.packages.find]
where = ["src"]  # Tells Python: "The actual code lives inside the src folder"

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "pre-commit",
]
benchmark = [
    "networkx",
    "numpy",
    "geomloss",
    "pykeops"
]
graphviz = [
    "graphviz"
]

[project.scripts]
crispy_fishstick = "crispy_fishstick.main:main"
