[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scTimeBench"  # This is the name you use for 'pip install'
version = "0.1.2"
dependencies = [
    "PyYAML",
    "scanpy",
    "scikit-learn",
    "fastparquet<2026.3.0",
]
requires-python = ">=3.10"
authors = [
    { name="Eric Haoran Huang", email="eric.h.huang@mail.mcgill.ca" },
    { name="Adrien Osakwe", email="adrien.osakwe@mail.mcgill.ca" },
    { name="Yue Li", email="yueli@cs.mcgill.ca" },
]
description = "A streamlined benchmarking platform for single-cell time-series analysis"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.10",
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/li-lab-mcgill/scTimeBench"
Issues = "https://github.com/li-lab-mcgill/scTimeBench/issues"
# TODO: have documentation here!

[tool.setuptools.packages.find]
where = ["src"]  # Tells Python: "The actual code lives inside the src folder"

[tool.setuptools.package-data]
scTimeBench = [
    "shared/dataset/*.yaml",
    "shared/dataset/cell_lineages/**/*.txt",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
]
benchmark = [
    "networkx",
    "numpy",
    "geomloss",
    "pykeops",
    "scanpy[leiden]",
    "graphviz",
    "celltypist"
]

[project.scripts]
scTimeBench = "scTimeBench.main:main"
